--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/World of Physics-WebGL5-Export.loader.js";
       var config = {
-        dataUrl: buildUrl + "/World of Physics-WebGL5-Export.data.br",
-        frameworkUrl: buildUrl + "/World of Physics-WebGL5-Export.framework.js.br",
-        codeUrl: buildUrl + "/World of Physics-WebGL5-Export.wasm.br",
+        dataUrl: buildUrl + "/World of Physics-WebGL5-Export.data",
+        frameworkUrl: buildUrl + "/World of Physics-WebGL5-Export.framework.js",
+        codeUrl: buildUrl + "/World of Physics-WebGL5-Export.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "World of Ideal Physics",
